--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -161,33 +161,31 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/space_2"
                             android:layout_marginTop="@dimen/space_16"
-                            android:text="@string/sort_by_returns"
+                            android:text="@string/category"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/cbDividend" />
 
-                        <TextView
-                            android:id="@+id/tvCategory"
+
+                        <FrameLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/space_4"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginTop="@dimen/space_8"
                             android:background="@drawable/shape_edt_white_round"
-                            android:drawableEnd="@drawable/ic_drop_down_white_24dp"
-                            android:gravity="center_vertical"
-                            android:paddingBottom="@dimen/space_6"
-                            android:paddingEnd="@dimen/space_8"
-                            android:paddingStart="@dimen/space_16"
-                            android:paddingTop="@dimen/space_6"
-                            android:text="@string/all"
-                            android:textAllCaps="true"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                            android:textColor="@android:color/white"
                             app:layout_constraintEnd_toStartOf="@+id/guidelineVCenter"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvCategoryL" />
+                            app:layout_constraintTop_toBottomOf="@+id/tvCategoryL">
 
+                            <Spinner
+                                android:id="@+id/spnCategory"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                android:spinnerMode="dialog" />
 
+                        </FrameLayout>
                         <!--******-->
                         <TextView
                             android:id="@+id/tvInvestType"
@@ -238,13 +236,33 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="@dimen/space_16"
-                            android:text="@string/sort_by_returns"
+                            android:text="@string/sub_category"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
                             app:layout_constraintStart_toEndOf="@id/guidelineVCenter"
                             app:layout_constraintTop_toBottomOf="@+id/cbDividend" />
 
-                        <TextView
+
+                        <FrameLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:background="@drawable/shape_edt_white_round"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/guidelineVCenter"
+                            app:layout_constraintTop_toBottomOf="@+id/tvSubCategoryL">
+
+                            <Spinner
+                                android:id="@+id/spnSubCategory"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                android:spinnerMode="dialog" />
+
+                        </FrameLayout>
+
+                        <!--<TextView
                             android:id="@+id/tvSubCategory"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -263,7 +281,7 @@
                             android:textColor="@android:color/white"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/guidelineVCenter"
-                            app:layout_constraintTop_toBottomOf="@+id/tvSubCategoryL" />
+                            app:layout_constraintTop_toBottomOf="@+id/tvSubCategoryL" />-->
 
 
                     </android.support.constraint.ConstraintLayout>
