--- a/app/src/main/res/layout/row_investment_list_item.xml
+++ b/app/src/main/res/layout/row_investment_list_item.xml
@@ -13,10 +13,10 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_section_item_bg"
-        android:padding="8dp"
         android:layout_marginBottom="4dp"
+        android:background="@drawable/shape_section_item_bg"
         android:elevation="2dp"
+        android:padding="8dp"
         tools:layout_marginEnd="8dp">
 
         <ImageView
@@ -24,19 +24,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/very_long_investments"
+            app:imgUrl="@{homeItem.imgUrl}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/very_long_investments" />
 
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             android:maxLines="2"
             android:minLines="2"
-            android:gravity="center_vertical"
             android:text="@{homeItem.title}"
             android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
