--- a/app/src/main/res/layout/row_section_investment_item.xml
+++ b/app/src/main/res/layout/row_section_investment_item.xml
@@ -8,6 +8,10 @@
         <variable
             name="section"
             type="com.tarrakki.module.home.HomeSection" />
+
+        <variable
+            name="onViewAll"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -32,6 +36,7 @@
             android:id="@+id/tvViewAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{onViewAll}"
             android:text="@string/view_all"
             android:textColor="@color/colorAccent"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvTitle"
@@ -46,17 +51,17 @@
             android:layout_marginTop="8dp"
             android:orientation="horizontal"
             android:overScrollMode="never"
-            android:paddingBottom="8dp"
+
             app:dividerH="@{@drawable/shape_transferant_divider}"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerview_pager_indicator"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             app:setAdapterH="@{section.homeItems}"
             tools:listitem="@layout/row_investment_list_item" />
 
-        <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
+        <!--<com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
             android:id="@+id/recyclerview_pager_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,7 +70,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:selectedDotColor="@color/colorAccent" />
+            app:selectedDotColor="@color/colorAccent" />-->
 
     </android.support.constraint.ConstraintLayout>
 
