--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -3,5 +3,8 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/space_8"
+    android:paddingBottom="@dimen/space_8"
+    android:paddingTop="@dimen/space_8"
+    android:paddingStart="28dp"
+    android:paddingEnd="@dimen/space_8"
     android:textColor="@android:color/black" />
