1: Set-up custom font. 2: Some minor bugs fixes. 3: Working on Fund Details-Performance Screen.

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -27,13 +27,14 @@
 
         <TextView
             android:id="@+id/toolbar_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_bold"
             android:maxLength="18"
             android:maxLines="1"
             android:text="@{vm.title}"
             android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/mToolBar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_navigation_main"
+            app:labelVisibilityMode="labeled"
             tools:layout_height="56dp" />
 
     </android.support.constraint.ConstraintLayout>
