--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,6 @@
                 android:layout_height="160dp"
                 app:cpb_background_progressbar_color="#2E1D3E"
                 app:cpb_background_progressbar_width="8dp"
-
                 app:cpb_progressbar_color="@color/colorAccent"
                 app:cpb_progressbar_width="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/homeView"
@@ -72,6 +71,7 @@
                 android:id="@+id/tvPortfolioValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_bold"
                 android:gravity="center"
                 android:minWidth="140dp"
                 android:text="@string/dummy"
@@ -149,6 +149,7 @@
                 android:id="@+id/tvTotalReturnValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:text="@string/dummy2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -165,16 +166,16 @@
                 android:text="(+1.05%)"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/colorAccent"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvTotalReturnValue"
-                app:layout_constraintStart_toEndOf="@id/tvTotalReturnValue" />
+                app:layout_constraintStart_toEndOf="@id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/tvTotalReturnValue" />
 
             <LinearLayout
                 android:id="@+id/llWhyTarrakki"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:orientation="vertical"
@@ -188,8 +189,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@{vm.whayTarrakki ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@string/why_tarrakki"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@android:color/black"
                     tools:drawableEnd="@drawable/ic_arrow_up" />
 
@@ -215,10 +216,10 @@
                 android:id="@+id/rvHomeItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:dividerV="@{@drawable/shape_transferant_divider}"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
+                app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -233,15 +234,19 @@
                 android:id="@+id/btnIdle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginStart="@dimen/default_space"
                 android:background="@drawable/shape_btn_idle_bg"
-                android:text="Move idle money from your bank A/C"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@string/move_idle_money_from_your_bank_a_c"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rvHomeItem"
-                app:layout_constraintVertical_bias="1" />
+                app:layout_constraintVertical_bias="1"
+                tools:layout_marginTop="@dimen/default_space" />
 
 
         </android.support.constraint.ConstraintLayout>
