--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -24,11 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/space_8">
+            android:paddingStart="@dimen/default_space"
+            android:paddingEnd="@dimen/default_space">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
@@ -38,9 +40,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@{fund.name}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/item_selected_color"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentL"
                     app:layout_constraintEnd_toStartOf="@+id/tvCurrent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0.43(1.10%)"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textSize="@dimen/sp9"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="0.43(1.10%)" />
@@ -63,9 +67,11 @@
                     android:layout_marginEnd="@dimen/space_4"
                     android:drawableEnd="@{fund.hasNegativeReturn? @drawable/ic_arrow_downward_red_24dp:@drawable/ic_arrow_upward_green}"
                     android:drawablePadding="@dimen/space_2"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@{fund.currentReturn +`%`}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@android:color/black"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentL"
                     app:layout_constraintEnd_toStartOf="@+id/tvCurrentL"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:drawableEnd="@drawable/ic_arrow_upward_green"
@@ -75,8 +81,10 @@
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/space_8"
                     android:text="NAV on 16 Aug, 2018"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvCurrentL"
                     tools:text="NAV on 16 Aug, 2018" />
@@ -86,7 +94,7 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
@@ -95,6 +103,7 @@
                     android:id="@+id/tvRiskLevelL"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@string/risk_level"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black"
@@ -112,13 +121,16 @@
                 <ProgressBar
                     android:id="@+id/progress"
                     style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginBottom="@dimen/space_8"
                     android:max="100"
                     android:progress="75"
+                    android:progressDrawable="@drawable/progress_horisental"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvRiskLevel" />
 
             </android.support.constraint.ConstraintLayout>
@@ -126,7 +138,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:orientation="vertical"
@@ -135,7 +147,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="key Information"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/key_information"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -154,7 +167,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:orientation="vertical"
@@ -163,6 +176,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@string/fund_objective"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black" />
@@ -170,18 +184,17 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_8"
                     android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginBottom="@dimen/space_8"
                     android:text="@string/fund_objective_info"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="@android:color/black" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:orientation="vertical"
@@ -190,7 +203,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Top 10 holdings"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/top_10_holdings"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -211,9 +225,10 @@
                 android:id="@+id/btnIdle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/space_8"
-                android:layout_marginTop="@dimen/space_16"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginBottom="@dimen/default_space"
                 android:background="@drawable/shape_btn_idle_bg"
+                android:fontFamily="@font/lato_semibold"
                 android:text="@string/invest_now"
                 android:textColor="@android:color/white" />
 
