--- a/app/src/main/res/layout/row_goal_home_list_item.xml
+++ b/app/src/main/res/layout/row_goal_home_list_item.xml
@@ -6,47 +6,44 @@
     <data>
 
         <variable
-            name="goal"
+            name="widget"
             type="com.tarrakki.module.goal.Goal" />
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="132dp"
+        android:layout_width="180dp"
+        android:layout_height="172dp"
         android:background="@drawable/shape_section_item_bg"
         android:elevation="2dp"
-        android:padding="8dp"
-        tools:layout_margin="@dimen/space_8">
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/ivItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            app:imgUrl="@{goal.imgUrl}"
             android:paddingBottom="@dimen/space_20"
+            app:imgUrl="@{widget.imgUrl}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@drawable/emergency_fund" />
+            tools:src="@drawable/wealth_creation" />
 
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:gravity="center"
+            android:gravity="center_horizontal|top"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{goal.title}"
+            android:text="@{widget.title}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivItem"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1"
             tools:text="Wealth creation" />
 
     </android.support.constraint.ConstraintLayout>
