--- a/app/src/main/res/layout/row_investment_list_item.xml
+++ b/app/src/main/res/layout/row_investment_list_item.xml
@@ -6,12 +6,12 @@
     <data>
 
         <variable
-            name="homeItem"
+            name="widget"
             type="com.tarrakki.module.home.HomeItem" />
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:background="@drawable/shape_section_item_bg"
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            app:imgUrl="@{homeItem.imgUrl}"
+            app:imgUrl="@{widget.imgUrl}"
+            android:layout_marginTop="@dimen/space_8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -35,11 +36,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{homeItem.title}"
-            android:textColor="@android:color/black"
+            android:text="@{widget.title}"
+            android:textColor="@color/semi_black"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivItem"
             tools:text="Very Long Term Investments" />
@@ -50,8 +52,8 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{homeItem.description}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textSize="@dimen/sp10"
+            android:text="@{widget.description}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             tools:text="Diversified equity founds, 10+ years or longer" />
