--- a/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
+++ b/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
@@ -12,7 +12,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/default_space">
 
         <TextView
             android:id="@+id/tvRiskLevelL"
@@ -38,13 +39,14 @@
             android:id="@+id/progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="6dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="@dimen/space_8"
             android:max="100"
             android:progress="@{topFund.process}"
+            android:progressDrawable="@drawable/progress_horisental"
             app:layout_constraintEnd_toStartOf="@+id/tvRiskLevel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvRiskLevelL"
