--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowDisablePreview">true</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="bold">
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
+    <style name="semibold">
+        <item name="android:fontFamily">@font/lato_semibold</item>
     </style>
 
 </resources>
