Worked on implementing fund overview screen.

--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -29,7 +29,7 @@
                 android:layout_height="380dp"
                 android:background="@drawable/filter_bg"
                 android:focusableInTouchMode="true"
-                android:padding="@dimen/space_8"
+                android:padding="@dimen/default_space"
                 app:el_duration="500"
                 app:el_expanded="true"
                 app:expanded="@{vm.filter}">
@@ -48,10 +48,10 @@
                         android:drawableEnd="@drawable/ic_search_white_24dp"
                         android:hint="@string/find_your_mutual_fund"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/space_6"
-                        android:paddingEnd="@dimen/space_8"
                         android:paddingStart="@dimen/space_16"
                         android:paddingTop="@dimen/space_6"
+                        android:paddingEnd="@dimen/space_8"
+                        android:paddingBottom="@dimen/space_6"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textColor="@android:color/white"
                         android:textColorHint="@android:color/white"
@@ -79,10 +79,11 @@
                         android:layout_marginTop="@dimen/space_8"
                         android:button="@drawable/selector_check_box"
                         android:checked="true"
-                        android:paddingEnd="@dimen/space_8"
                         android:paddingStart="@dimen/space_8"
+                        android:paddingEnd="@dimen/space_8"
                         android:text="@string/risk_level"
                         android:textAllCaps="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/rvFundType" />
@@ -114,6 +115,7 @@
                         android:layout_marginTop="@dimen/space_16"
                         android:text="@string/sort_by_returns"
                         android:textAllCaps="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/rvRiskLevel" />
@@ -140,6 +142,7 @@
                         android:layout_marginTop="@dimen/space_16"
                         android:text="@string/category"
                         android:textAllCaps="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cbDividend" />
@@ -148,8 +151,8 @@
                     <FrameLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
                         android:layout_marginTop="@dimen/space_8"
+                        android:layout_marginEnd="8dp"
                         android:background="@drawable/shape_edt_white_round"
                         app:layout_constraintEnd_toStartOf="@+id/guidelineVCenter"
                         app:layout_constraintStart_toStartOf="parent"
@@ -173,6 +176,7 @@
                         android:layout_marginTop="@dimen/space_16"
                         android:text="@string/sort_by_returns"
                         android:textAllCaps="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
                         app:layout_constraintStart_toEndOf="@id/guidelineVCenter"
                         app:layout_constraintTop_toBottomOf="@+id/rvRiskLevel" />
@@ -185,8 +189,8 @@
                         android:layout_marginTop="@dimen/space_8"
                         android:button="@drawable/selector_check_box"
                         android:checked="true"
-                        android:paddingEnd="@dimen/space_8"
                         android:paddingStart="@dimen/space_8"
+                        android:paddingEnd="@dimen/space_8"
                         android:text="@string/growth"
                         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
@@ -200,8 +204,8 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="@dimen/space_8"
                         android:button="@drawable/selector_check_box"
-                        android:paddingEnd="@dimen/space_8"
                         android:paddingStart="@dimen/space_8"
+                        android:paddingEnd="@dimen/space_8"
                         android:text="@string/dividend_payout"
                         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
@@ -216,6 +220,7 @@
                         android:layout_marginTop="@dimen/space_16"
                         android:text="@string/sub_category"
                         android:textAllCaps="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@android:color/white"
                         app:layout_constraintStart_toEndOf="@id/guidelineVCenter"
                         app:layout_constraintTop_toBottomOf="@+id/cbDividend" />
@@ -251,9 +256,9 @@
                 android:layout_height="28dp"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true"
-                android:paddingBottom="@dimen/space_8"
-                android:paddingEnd="@dimen/space_8"
                 android:paddingStart="@dimen/space_8"
+                android:paddingEnd="@dimen/space_8"
+                android:paddingBottom="@dimen/space_8"
                 android:src="@{vm.filter ? @drawable/filter_up :  @drawable/filter_down}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -264,10 +269,10 @@
                 android:id="@+id/rvFunds"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/space_8"
-                android:paddingEnd="@dimen/default_space"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
                 app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 tools:itemCount="2"
