--- a/app/src/main/res/layout/row_fund_type_list_item.xml
+++ b/app/src/main/res/layout/row_fund_type_list_item.xml
@@ -14,12 +14,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@{fundType.selected ? @drawable/shape_fun_type_selected : @drawable/shape_white_round_corneer}"
+        android:gravity="center"
+        android:minWidth="80dp"
         android:padding="@dimen/space_8"
         android:text="@{fundType.name}"
-        android:minWidth="80dp"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/sp10"
         tools:background="@drawable/shape_fun_type_selected"
         tools:layout_marginEnd="@dimen/space_8"
         tools:text="All">
