--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -98,6 +98,14 @@
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
 
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/mChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
             </android.support.constraint.ConstraintLayout>
 
