--- a/app/src/main/res/layout/row_fund_returns_list_item.xml
+++ b/app/src/main/res/layout/row_fund_returns_list_item.xml
@@ -11,12 +11,12 @@
 
     <TextView
         android:id="@+id/tvFundType"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
         android:background="@{fundType.selected ? @drawable/shape_fund_return_selected_bg : @drawable/shape_fund_return_unselected_bg}"
         android:gravity="center"
         android:text="@{fundType.name}"
-        android:textSize="10sp"
+        android:textSize="@dimen/sp10"
         android:textColor="@android:color/white"
         tools:background="@drawable/shape_fund_return_selected_bg"
         tools:layout_marginEnd="4dp"
