--- a/app/src/main/res/layout/row_risk_level_indicator.xml
+++ b/app/src/main/res/layout/row_risk_level_indicator.xml
@@ -44,7 +44,7 @@
             android:text="@{riskLevel.name}"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:textSize="10sp"
+            android:textSize="@dimen/sp8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mDivider"
