--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -26,7 +26,7 @@
         android:title="@string/learn"
         app:showAsAction="always|withText" />
     <item
-        android:id="@+id/action_info"
+        android:id="@+id/action_account"
         android:enabled="true"
         android:icon="@drawable/accounts"
         android:title="@string/account"
