--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -98,11 +98,91 @@
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
 
-                <com.jjoe64.graphview.GraphView
-                    android:id="@+id/graph"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dip" />
+                <TextView
+                    android:id="@+id/tvLastPriceL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/last_price"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/tvLastPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="\u20B939.55"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL" />
+
+                <TextView
+                    android:id="@+id/tvDayChangeL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/_1_day_change"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@id/tvYDRLabel"
+                    app:layout_constraintStart_toEndOf="@id/tvLastPriceL"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvDayChange"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="0.09%"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL" />
+
+                <TextView
+                    android:id="@+id/tvYDRLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/year_to_date_return"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvYDR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="17.85%"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="@id/tvYDRLabel"
+                    app:layout_constraintTop_toBottomOf="@+id/tvYDRLabel" />
+
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/mChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="@dimen/space_8"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvLastPrice" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvDurations"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:orientation="horizontal"
+                    android:overScrollMode="never"
+                    app:dividerH="@{@drawable/shape_transferant_divider}"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/mChart"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/row_duration_list_item" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -296,7 +376,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvYouEarn"
                     tools:itemCount="2"
-                    tools:listitem="@layout/row_top_ten_holdings_list_item" />
+                    tools:listitem="@layout/row_earning_base_returns_list_item" />
 
                 <TextView
                     android:layout_width="match_parent"
