--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#4D204A</color>
     <color name="colorAccent">#4EB95D</color>
 
+    <color name="white">#FFF</color>
     <color name="bg_color">#ddd</color>
     <color name="lighter_gray">#ddd</color>
     <color name="home_title_color">#B5ADB5</color>
