1: Resolved issues of the performance chart. 2: Some other minor fixes.

--- a/app/src/main/res/drawable/progress_horisental.xml
+++ b/app/src/main/res/drawable/progress_horisental.xml
@@ -14,9 +14,9 @@
             <shape>
 
                 <gradient
-                    android:centerColor="#9E45AE"
-                    android:endColor="#7344C8"
-                    android:startColor="#C44595" />
+                    android:centerColor="#8B44B9"
+                    android:endColor="#7144C9"
+                    android:startColor="#C64594" />
                 <corners android:radius="16dp" />
             </shape>
         </clip>
