--- a/app/src/main/res/layout/row_fund_list_item.xml
+++ b/app/src/main/res/layout/row_fund_list_item.xml
@@ -220,7 +220,9 @@
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_8"
             android:background="@drawable/shape_btn_idle_bg"
+            android:fontFamily="@font/lato_semibold"
             android:text="@string/invest"
+            android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
