--- a/app/src/main/res/layout/row_duration_list_item.xml
+++ b/app/src/main/res/layout/row_duration_list_item.xml
@@ -16,16 +16,17 @@
         android:background="@{fundType.selected ? @drawable/shape_btn_idle_bg : @drawable/shape_rounded_gray}"
         android:gravity="center"
         android:minWidth="48dp"
-        android:paddingTop="@dimen/space_4"
-        android:paddingBottom="@dimen/space_4"
         android:paddingStart="@dimen/space_8"
+        android:paddingTop="@dimen/space_4"
         android:paddingEnd="@dimen/space_8"
+        android:paddingBottom="@dimen/space_4"
         android:text="@{fundType.name}"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="@{fundType.selected ? @color/white : @android:color/darker_gray}"
+        android:textColor="@{fundType.selected ? @color/white : @color/semi_black}"
         tools:background="@drawable/shape_rounded_gray"
         tools:layout_marginEnd="@dimen/space_8"
-        tools:text="1Y">
+        tools:text="1Y"
+        tools:textColor="@color/semi_black">
 
     </TextView>
 </layout>
