--- a/app/src/main/res/layout/row_earning_base_returns_list_item.xml
+++ b/app/src/main/res/layout/row_earning_base_returns_list_item.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{topFund.name}"
+            android:textColor="@color/semi_black"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Gruh Finance Ltd." />
@@ -40,7 +41,7 @@
             android:id="@+id/tvReturn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{topFund.percentageHolding}"
+            android:text="@{topFund.returns}"
             android:textSize="@dimen/sp9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAmount"
