--- a/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
+++ b/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
@@ -28,7 +28,7 @@
             android:id="@+id/tvRiskLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{topFund.percentageHolding}"
+            android:text="@{topFund.percentageHolding + `%`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBaseline_toBaselineOf="@+id/progress"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +42,8 @@
             android:layout_height="6dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="8dp"
             android:max="100"
             android:progress="@{topFund.process}"
             android:progressDrawable="@drawable/progress_horisental"
