--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:drawableEnd="@drawable/ic_drop_down_white_24dp"
+    android:ellipsize="end"
     android:gravity="center_vertical"
-    android:paddingBottom="@dimen/space_8"
-    android:paddingEnd="@dimen/space_8"
     android:paddingStart="@dimen/space_16"
     android:paddingTop="@dimen/space_8"
+    android:paddingEnd="@dimen/space_8"
+    android:paddingBottom="@dimen/space_8"
+    android:singleLine="true"
     android:text="@string/all"
     android:textAllCaps="true"
-    android:textSize="10sp"
-    android:textColor="@android:color/white" />
+    android:textColor="@android:color/white"
+    android:textSize="10sp" />
