--- a/app/src/main/res/layout/fragment_your_goal.xml
+++ b/app/src/main/res/layout/fragment_your_goal.xml
@@ -31,9 +31,9 @@
             <View
                 android:id="@+id/mStepLine"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/space_8"
                 android:layout_marginTop="@dimen/default_space"
-                android:background="@color/darker_gray"
+                android:background="@drawable/shape_double_line"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -109,109 +109,20 @@
 
             </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/tvGoalValueL"
+            <org.supportcompact.widgets.WrapContentViewPager
+                android:id="@+id/mPageGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
-                android:text="@string/current_value_of_your_dream_home"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/semi_black"
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
+                android:overScrollMode="never"
+                app:layout_constraintBottom_toTopOf="@+id/btnPrevious"
                 app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-            <LinearLayout
-                android:id="@+id/llContainer"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_rounded_gray"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/space_8"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvGoalValueL">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_8"
-                    android:layout_marginEnd="@dimen/space_8"
-                    android:text="@string/rs_symbol"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/semi_black" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:hint="1,00,000"
-                    android:inputType="number"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/semi_black" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvGoalDurationL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
-                android:text="@string/numbers_of_years_you_d_like_to_buy_it"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/semi_black"
-                app:layout_constraintTop_toBottomOf="@+id/llContainer" />
-
-            <RelativeLayout
-                android:id="@+id/llContainer2"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_rounded_gray"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/space_8"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvGoalDurationL">
-
-                <EditText
-                    android:id="@+id/edtDurations"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="@dimen/space_8"
-                    android:layout_marginEnd="@dimen/space_8"
-                    android:layout_toStartOf="@+id/tvDurations"
-                    android:background="@null"
-                    android:inputType="number"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/semi_black" />
-
-                <TextView
-                    android:id="@+id/tvDurations"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="@dimen/space_8"
-                    android:layout_marginEnd="@dimen/space_8"
-                    android:fontFamily="@font/lato_semibold"
-                    android:text="years"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/semi_black" />
-
-
-            </RelativeLayout>
 
             <Button
                 android:id="@+id/btnPrevious"
                 android:layout_width="124dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/space_8"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:drawableStart="@drawable/ic_arrow_previous"
@@ -224,15 +135,14 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/llContainer2" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline4" />
 
             <Button
                 android:id="@+id/btnNext"
                 android:layout_width="124dp"
                 android:layout_height="38dp"
                 android:layout_marginStart="@dimen/space_8"
-                android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:drawableEnd="@drawable/ic_arrow_next_white"
                 android:fontFamily="@font/lato_semibold"
@@ -243,8 +153,8 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/llContainer2" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline4" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guideline4"
