--- a/app/src/main/res/drawable/shape_double_line.xml
+++ b/app/src/main/res/drawable/shape_double_line.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:bottom="@dimen/space_2">
+    <item android:bottom="@dimen/space_4">
         <shape android:shape="line">
             <stroke
                 android:width="1dp"
-                android:color="#aaa" />
+                android:color="@color/lighter_gray" />
             <size android:height="0.5dp" />
         </shape>
     </item>
-    <item android:top="@dimen/space_2">
+    <item android:top="@dimen/space_4">
         <shape android:shape="line">
             <stroke
                 android:width="1dp"
-                android:color="#aaa" />
+                android:color="@color/lighter_gray" />
             <size android:height="0.5dp" />
         </shape>
     </item>
