--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -56,14 +56,15 @@
             android:id="@+id/mBottomNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="@{vm.footerVisibility}"
             app:itemBackground="@android:color/white"
             app:itemIconTint="@color/nave_bar_selector"
             app:itemTextColor="@color/nave_bar_selector"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_navigation_main"
-            app:labelVisibilityMode="labeled"
             tools:layout_height="56dp" />
 
     </android.support.constraint.ConstraintLayout>
