--- a/app/src/main/res/layout/fragment_your_goal.xml
+++ b/app/src/main/res/layout/fragment_your_goal.xml
@@ -40,18 +40,18 @@
 
             <ImageView
                 android:id="@+id/ivStep1"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@color/darker_gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_step_bg"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
                 app:layout_constraintTop_toTopOf="@id/mStepLine" />
 
             <ImageView
                 android:id="@+id/ivStep2"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@color/darker_gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_step_bg"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
@@ -60,23 +60,22 @@
 
             <ImageView
                 android:id="@+id/ivStep3"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@color/darker_gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_step_bg"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
                 app:layout_constraintTop_toTopOf="@id/mStepLine" />
 
-
             <android.support.v7.widget.CardView
                 android:id="@+id/view2"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="144dp"
+                android:layout_height="144dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/default_space"
                 android:elevation="12dp"
                 app:cardBackgroundColor="@color/circular_bg"
-                app:cardCornerRadius="60dp"
+                app:cardCornerRadius="72dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivStep2">
@@ -111,11 +110,11 @@
 
             <org.supportcompact.widgets.WrapContentViewPager
                 android:id="@+id/mPageGoal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginBottom="@dimen/space_8"
                 android:overScrollMode="never"
+                android:paddingTop="@dimen/space_32"
+                android:paddingBottom="@dimen/space_32"
                 app:layout_constraintBottom_toTopOf="@+id/btnPrevious"
                 app:layout_constraintTop_toBottomOf="@+id/view2" />
 
