--- a/app/src/main/res/layout/set_your_goal_step1.xml
+++ b/app/src/main/res/layout/set_your_goal_step1.xml
@@ -58,7 +58,7 @@
                 android:text="@={yourGoal.answered}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/semi_black"
-                app:isCurrency="@{true}" />
+                app:isPositiveCurrency="@{true}" />
 
         </LinearLayout>
 
@@ -66,7 +66,7 @@
             android:id="@+id/tvGoalDurationL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_space"
+            android:layout_marginTop="@dimen/space_30"
             android:fontFamily="@font/lato_semibold"
             android:gravity="center"
             android:text="@{yourGoal.question2}"
@@ -101,7 +101,8 @@
                 android:maxLength="2"
                 android:text="@={yourGoal.answered2}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/semi_black" />
+                android:textColor="@color/semi_black"
+                app:isPositiveCurrency="@{true}" />
 
             <TextView
                 android:id="@+id/tvDurations"
