--- a/app/src/main/res/layout/set_your_goal_step3.xml
+++ b/app/src/main/res/layout/set_your_goal_step3.xml
@@ -45,7 +45,7 @@
             android:id="@+id/tvGoalDurationL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_space"
+            android:layout_marginTop="@dimen/space_30"
             android:fontFamily="@font/lato_semibold"
             android:gravity="center"
             android:text="@{yourGoal.question2}"
@@ -86,7 +86,7 @@
                 android:text="@={yourGoal.answered2}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/semi_black"
-                app:isCurrency="@{true}" />
+                app:isPositiveCurrency="@{true}" />
 
         </LinearLayout>
 
